# DeepWave

./: .gitignore  README.rst  conda_requirements.txt  requirements.txt  setup.cfg  setup.py
datasets/FRIDA/: N_layer_vs_precision.py  extract_dataset.py  ground_truth.py  marker.py  run.sh
datasets/Pyramic/: color_plot.py  export_rgb.py  extract_dataset.py  extract_simulated_dataset.py  helpers.py  run.sh  split_dataset.py
datasets/simulated/: ablation_study.sh  export_ablation_results.py  run.sh  simulate.py  split_dataset.py
deepwave/: __init__.py  apgd.py  spectral.py
deepwave/data/tools/io/plot/: siml_style.mplstyle
deepwave/nn/: __init__.py  crnn.py
deepwave/tools/: grid.py  instrument.py
deepwave/tools/data_gen/: source.py  statistics.py
deepwave/tools/io/: image.py  plot.py
deepwave/tools/math/: func.py  graph.py  linalg.py  optim.py  special.py  sphere.py  stat.py
scripts/: export_dataset.py  inspect_crnn.py  inspect_dataset.py  merge_dataset.py  redis_consumer.py  train_crnn.py
