# ############################################################################
# setup.cfg
# =========
# Author : Sepand KASHANI [sepand.kashani@epfl.ch]
# ############################################################################

[metadata]
name = deepwave
summary = DeepWave reference implementation. [https://infoscience.epfl.ch/record/265765?ln=en]
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
keywords =
    array signal processing
    first-order convex optimization
    inverse problems
    neural networks

author = Sepand KASHANI [LCAV, EPFL]
author_email = sepand.kashani@epfl.ch
url = https://github.com/imagingofthings/DeepWave
download_url = ssh://git@c4science.ch/diffusion/7600/neural-network-powered-acoustic-camera.git

classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering
license = GPLv3

[options]
include_package_data = True
python_requires = >=3.6
zip_safe = False

[files]
packages =
    deepwave
data_files =
#    etc/ = etc/deepwave.cfg
